# nerdeala25

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCUMENTACION_API_COMPLETA.md  README.md  admin-crud.md  auth-system.md  checklist-avance-proyecto.md  classroom-roadmap.md  database-setup.md  docker-compose.prod.yml  docker-compose.whatsapp.yml  executionsteps.md  frontend-implemention.md  generate-secrets.sh  implementation-guide.md  implementation-steps.md  landing-page.md  setup-github-secrets.sh  setup-github-ssh.sh  setup-whatsapp-web.py  vibe-coding-rules.md
apps/api/: .env.example  Dockerfile  pyproject.toml  test.db
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: attendance.py  course.py  course_assignment.py  course_membership.py  course_participant.py  course_submission.py  etag_cache.py  notification.py  oauth_credential.py  report.py  student.py  token.py  user.py  user_contact.py  user_onboarding.py
apps/api/app/repositories/: attendance.py  course_assignments.py  course_memberships.py  course_participants.py  course_submissions.py  courses.py  etag_cache.py  notifications.py  oauth_credentials.py  reports.py  students.py  tokens.py  user_contacts.py  user_onboarding.py  users.py
apps/api/app/schemas/: attendance.py  auth.py  classroom.py  common.py  course.py  notification.py  onboarding.py  report.py  student.py  user.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_classroom_sync.py  test_student_flow.py
(+104 files in other folders)
