[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerdeala-api"
version = "0.1.0"
description = "FastAPI backend for Nerdeala Vibeathon"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.1",
  "pydantic[email]==2.6.3",
  "pydantic-settings==2.0.3",
  "sqlalchemy==2.0.25",
  "alembic==1.13.1",
  "psycopg2-binary==2.9.9",
  "aiosqlite==0.19.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.9",
  "httpx==0.26.0",
  "redis==5.0.1",
  "tenacity==8.2.3",
  "apscheduler==3.10.4",
  "maturin~=1.8.1"
]

[tool.setuptools]
package-dir = {"" = ""}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"
]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
ruff = "0.1.15"
mypy = "1.8.0"
